# bevy_3d_platformer_test

./: Cargo.toml
assets/models/: stickman.glb
assets/scenes/: scene.scn.ron
src/: camera.rs  character_controller.rs  debug_mode.rs  gamepad.rs  keyboard.rs  main.rs  player.rs
