[package]
name = "fall_guys_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_editor_pls = "0.2.0"
bevy_rapier3d = "0.19.0"

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1